--- a/payment-gateway/package.json
+++ b/payment-gateway/package.json
@@ -8,5 +8,8 @@
     "dashboard": "node examples/dashboard.js"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^30.2.0"
+  }
 }
