--- a/payment-gateway/package.json
+++ b/payment-gateway/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "dashboard": "node examples/dashboard.js"
+    "dashboard": "node examples/dashboard.js",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@stryker-mutator/core": "^9.5.1",
+    "@stryker-mutator/jest-runner": "^9.5.1",
     "jest": "^30.2.0"
   }
 }
